Bug 19462 - generating return insns while current_function_epilogue_delay_list nonempty
Summary: generating return insns while current_function_epilogue_delay_list nonempty
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: rtl-optimization (show other bugs)
Version: 4.0.0
: P3 normal
Target Milestone: 4.0.0
Assignee: Hans-Peter Nilsson
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2005-01-15 19:49 UTC by Hans-Peter Nilsson
Modified: 2005-01-19 17:18 UTC (History)
1 user (show)

See Also:
Host:
Target: cris-*-*
Build:
Known to work:
Known to fail:
Last reconfirmed: 2005-01-15 21:27:40


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hans-Peter Nilsson 2005-01-15 19:49:11 UTC
Similar to PR target/7042, this bug is about reorg generating
a return insn while current_function_epilogue_delay_list.
The test-case is newlib/libc/string/wcscspn.c:1.1, which will
be entered in the test-suite (including copyright/license note)
with modified data-types to avoid included files.

Like PR target/7042, this should only affect targets with
ELIGIBLE_FOR_EPILOGUE_DELAY

Noticed thanks to the sanity check in the CRIS port
introduced with the fix for PR target/7042.

The error looks like this, cutnpasted:
/home/hp/cvs_areas/combined/cris-obj/gcc/xgcc
-B/home/hp/cvs_areas/combined/cris-obj/gcc/ -nostdinc
-B/home/hp/cvs_areas/combined\
/cris-obj/cris-unknown-elf/v10/newlib/ -isystem
/home/hp/cvs_areas/combined/cris-obj/cris-unknown-elf/v10/newlib/targ-include
-is\
ystem /home/hp/cvs_areas/combined/combined/newlib/libc/include
-B/tmp/cris/cris-unknown-elf/bin/ -B/tmp/cris/cris-unknown-elf/lib\
/ -isystem /tmp/cris/cris-unknown-elf/include -isystem
/tmp/cris/cris-unknown-elf/sys-include -L/home/hp/cvs_areas/combined/cris-\
obj/ld  -march=v10 -mbest-lib-options -DPACKAGE=\"newlib\" -DVERSION=\"1.13.0\" 
-I. -I/home/hp/cvs_areas/combined/combined/newli\
b/libc/string  -O2 -DHAVE_RENAME -DHAVE_GETTIMEOFDAY -D_USE_WRITE
-fno-builtin    -O2 -g -O2  -O2 -g -O2  -march=v10 -mbest-lib-o\
ptions -c /home/hp/cvs_areas/combined/combined/newlib/libc/string/wcscspn.c
/home/hp/cvs_areas/combined/combined/newlib/libc/string/wcscspn.c: In function
'wcscspn':
/home/hp/cvs_areas/combined/combined/newlib/libc/string/wcscspn.c:85: internal
compiler error: in output_149, at insn-output.c:1086
Please submit a full bug report,
with preprocessed source if appropriate.
Comment 1 Hans-Peter Nilsson 2005-01-15 19:51:50 UTC
This bug was first spotted with "Fri Jan 14 01:28:39 UTC 2005",
then confirmed on another system with "Fri Jan 14 10:58:15 CET 2005".
Patch-testing in progress.
Comment 2 Andrew Pinski 2005-01-15 20:03:23 UTC
Any smaller testcase would be helpfull :).
Comment 3 Hans-Peter Nilsson 2005-01-15 20:15:11 UTC
Why was severity changed to minor?
I changed it back to "normal"; this bug must be fixed,
so maybe it should have been "critical".
And I'll handle the test-case, don't worry.
Comment 4 Andrew Pinski 2005-01-15 20:27:40 UTC
Well there is no testcase in this bug.
Comment 5 Hans-Peter Nilsson 2005-01-15 21:05:27 UTC
Hm, I thought I had assigned this to me.  Stupid bugzilla.
Comment 6 Andrew Pinski 2005-01-15 21:06:59 UTC
You know that there is a "view bug activity" which shows why something in the state.

Again there is no testcase here, we really need one even though you are fixing it.
Comment 7 Hans-Peter Nilsson 2005-01-15 21:27:40 UTC
Of course we need a test-case.  Still, when I've assigned the bug to me
_I_will_take_care_of_that_.  See also initial text.  You're not helping.
Comment 8 GCC Commits 2005-01-15 21:30:48 UTC
Subject: Bug 19462

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	hp@gcc.gnu.org	2005-01-15 21:30:42

Modified files:
	gcc/testsuite  : ChangeLog 
Added files:
	gcc/testsuite/gcc.dg/torture: pr19462-1.c 

Log message:
	PR rtl-optimization/19462
	* gcc.dg/torture/pr19462-1.c: New test.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/ChangeLog.diff?cvsroot=gcc&r1=1.4892&r2=1.4893
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/gcc.dg/torture/pr19462-1.c.diff?cvsroot=gcc&r1=NONE&r2=1.1

Comment 9 GCC Commits 2005-01-19 16:41:04 UTC
Subject: Bug 19462

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	hp@gcc.gnu.org	2005-01-19 16:39:27

Modified files:
	gcc            : ChangeLog reorg.c 

Log message:
	PR rtl-optimization/19462
	* reorg.c (find_end_label): Create return insn only if
	current_function_epilogue_delay_list is empty.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=2.7186&r2=2.7187
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/reorg.c.diff?cvsroot=gcc&r1=1.102&r2=1.103

Comment 10 GCC Commits 2005-01-19 17:04:56 UTC
Subject: Bug 19462

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	hp@gcc.gnu.org	2005-01-19 17:04:25

Modified files:
	gcc/testsuite  : ChangeLog 
	gcc/testsuite/gcc.dg/torture: pr19462-1.c 

Log message:
	PR rtl-optimization/19462
	* gcc.dg/torture/pr19462-1.c: Remove token xfail marker.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/ChangeLog.diff?cvsroot=gcc&r1=1.4910&r2=1.4911
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/gcc.dg/torture/pr19462-1.c.diff?cvsroot=gcc&r1=1.1&r2=1.2

Comment 11 Hans-Peter Nilsson 2005-01-19 17:18:51 UTC
All committed to main trunk.
(May reopen for branches.)