re PR rtl-optimization/19462 (generating return insns while current_function_epilogue_delay_list nonempty)

PR rtl-optimization/19462
	* reorg.c (find_end_label): Create return insn only if
	current_function_epilogue_delay_list is empty.

From-SVN: r93901